@@ -17874,6 +17874,324 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|//////////////////////////////////////////////////////////////////////////////
+comment|// Bloom filter test
+comment|//////////////////////////////////////////////////////////////////////////////
+specifier|public
+name|void
+name|testAllColumnsWithBloomFilter
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|byte
+index|[]
+name|TABLE
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"testAllColumnsWithBloomFilter"
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|FAMILY
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"family"
+argument_list|)
+decl_stmt|;
+comment|//Create table
+name|HColumnDescriptor
+name|hcd
+init|=
+operator|new
+name|HColumnDescriptor
+argument_list|(
+name|FAMILY
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_COMPRESSION
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_IN_MEMORY
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_BLOCKCACHE
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_TTL
+argument_list|,
+literal|"rowcol"
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_REPLICATION_SCOPE
+argument_list|)
+decl_stmt|;
+name|HTableDescriptor
+name|htd
+init|=
+operator|new
+name|HTableDescriptor
+argument_list|(
+name|TABLE
+argument_list|)
+decl_stmt|;
+name|htd
+operator|.
+name|addFamily
+argument_list|(
+name|hcd
+argument_list|)
+expr_stmt|;
+name|HRegionInfo
+name|info
+init|=
+operator|new
+name|HRegionInfo
+argument_list|(
+name|htd
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|Path
+name|path
+init|=
+operator|new
+name|Path
+argument_list|(
+name|DIR
+operator|+
+literal|"testAllColumnsWithBloomFilter"
+argument_list|)
+decl_stmt|;
+name|region
+operator|=
+name|HRegion
+operator|.
+name|createHRegion
+argument_list|(
+name|info
+argument_list|,
+name|path
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+comment|// For row:0, col:0: insert versions 1 through 5.
+name|byte
+name|row
+index|[]
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"row:"
+operator|+
+literal|0
+argument_list|)
+decl_stmt|;
+name|byte
+name|column
+index|[]
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"column:"
+operator|+
+literal|0
+argument_list|)
+decl_stmt|;
+name|Put
+name|put
+init|=
+operator|new
+name|Put
+argument_list|(
+name|row
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|long
+name|idx
+init|=
+literal|1
+init|;
+name|idx
+operator|<=
+literal|4
+condition|;
+name|idx
+operator|++
+control|)
+block|{
+name|put
+operator|.
+name|add
+argument_list|(
+name|FAMILY
+argument_list|,
+name|column
+argument_list|,
+name|idx
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"value-version-"
+operator|+
+name|idx
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|region
+operator|.
+name|put
+argument_list|(
+name|put
+argument_list|)
+expr_stmt|;
+comment|//Flush
+name|region
+operator|.
+name|flushcache
+argument_list|()
+expr_stmt|;
+comment|//Get rows
+name|Get
+name|get
+init|=
+operator|new
+name|Get
+argument_list|(
+name|row
+argument_list|)
+decl_stmt|;
+name|get
+operator|.
+name|setMaxVersions
+argument_list|()
+expr_stmt|;
+name|KeyValue
+index|[]
+name|kvs
+init|=
+name|region
+operator|.
+name|get
+argument_list|(
+name|get
+argument_list|,
+literal|null
+argument_list|)
+operator|.
+name|raw
+argument_list|()
+decl_stmt|;
+comment|//Check if rows are correct
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
+name|kvs
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|checkOneCell
+argument_list|(
+name|kvs
+index|[
+literal|0
+index|]
+argument_list|,
+name|FAMILY
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|4
+argument_list|)
+expr_stmt|;
+name|checkOneCell
+argument_list|(
+name|kvs
+index|[
+literal|1
+index|]
+argument_list|,
+name|FAMILY
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+expr_stmt|;
+name|checkOneCell
+argument_list|(
+name|kvs
+index|[
+literal|2
+index|]
+argument_list|,
+name|FAMILY
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|checkOneCell
+argument_list|(
+name|kvs
+index|[
+literal|3
+index|]
+argument_list|,
+name|FAMILY
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
 specifier|private
 name|void
 name|putData
@@ -18678,6 +18996,145 @@ argument_list|,
 name|path
 argument_list|,
 name|conf
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Assert that the passed in KeyValue has expected contents for the    * specified row, column& timestamp.    */
+specifier|private
+name|void
+name|checkOneCell
+parameter_list|(
+name|KeyValue
+name|kv
+parameter_list|,
+name|byte
+index|[]
+name|cf
+parameter_list|,
+name|int
+name|rowIdx
+parameter_list|,
+name|int
+name|colIdx
+parameter_list|,
+name|long
+name|ts
+parameter_list|)
+block|{
+name|String
+name|ctx
+init|=
+literal|"rowIdx="
+operator|+
+name|rowIdx
+operator|+
+literal|"; colIdx="
+operator|+
+name|colIdx
+operator|+
+literal|"; ts="
+operator|+
+name|ts
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Row mismatch which checking: "
+operator|+
+name|ctx
+argument_list|,
+literal|"row:"
+operator|+
+name|rowIdx
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|kv
+operator|.
+name|getRow
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"ColumnFamily mismatch while checking: "
+operator|+
+name|ctx
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|cf
+argument_list|)
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|kv
+operator|.
+name|getFamily
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Column qualifier mismatch while checking: "
+operator|+
+name|ctx
+argument_list|,
+literal|"column:"
+operator|+
+name|colIdx
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|kv
+operator|.
+name|getQualifier
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Timestamp mismatch while checking: "
+operator|+
+name|ctx
+argument_list|,
+name|ts
+argument_list|,
+name|kv
+operator|.
+name|getTimestamp
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Value mismatch while checking: "
+operator|+
+name|ctx
+argument_list|,
+literal|"value-version-"
+operator|+
+name|ts
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|kv
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
